AM_CPPFLAGS = -I$(top_srcdir) -lstdc++


bin_PROGRAMS = lcdtestpattern
lcdtestpattern_LDADD = $(top_builddir)/glcdskin/libglcdskin.la \
                       $(top_builddir)/glcddrivers/libglcddrivers.la \
                       $(top_builddir)/glcdgraphics/libglcdgraphics.la

lcdtestpattern_SOURCES = lcdtestpattern.cpp

